--- a/django_movie/templates/movies/movie_detail.html
+++ b/django_movie/templates/movies/movie_detail.html
@@ -103,9 +103,9 @@
                 <h3 class="shop-sing editContent" style="outline: none; cursor: inherit;">
                     О фильме {{ movie.title }}</h3>
                 <p>
-                    <img src="bundles/images/about.jpg" class="img-fluid" alt="">
-                    <img src="bundles/images/admin.jpg" class="img-fluid" alt="">
-                    <img src="bundles/images/d1.jpg" class="img-fluid" alt="">
+                    {% for image in movie.movieshots_set.all %}
+                    <img src="{{ image.image.url }}" class="img-fluid" alt="{{ image.description }}">
+                    {% endfor %}
                 </p>
                 <p class="editContent" style="outline: none; cursor: inherit;">{{ movie.description }}</p>
                 <p class="mt-3 italic-blue editContent"
@@ -127,14 +127,15 @@
                         <h3 class="editContent" style="outline: none; cursor: inherit;">
                                     <span class="sub-tittle editContent"
                                           style="outline: none; cursor: inherit;">02</span>Оставить отзыв</h3>
-                        <form action="#" method="get" class="mt-4">
+                        <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4">
+                            {% csrf_token %}
                             <div class="form-group editContent"
                                  style="outline: none; cursor: inherit;">
                                 <label for="contactcomment" class="editContent"
                                        style="outline: none; cursor: inherit;">Ваш комментарий
                                     *</label>
                                 <textarea class="form-control border" rows="5"
-                                          id="contactcomment" required=""></textarea>
+                                          id="contactcomment" required="" name="text"></textarea>
                             </div>
                             <div class="d-sm-flex">
                                 <div class="col-sm-6 form-group p-0 editContent"
@@ -143,7 +144,7 @@
                                            style="outline: none; cursor: inherit;">Имя
                                         *</label>
                                     <input type="text" class="form-control border"
-                                           id="contactusername" required="">
+                                           id="contactusername" required="" name="name">
                                 </div>
                                 <div class="col-sm-6 form-group ml-sm-3 editContent"
                                      style="outline: none; cursor: inherit;">
@@ -151,7 +152,7 @@
                                            style="outline: none; cursor: inherit;">Email
                                         *</label>
                                     <input type="email" class="form-control border"
-                                           id="contactemail" required="">
+                                           id="contactemail" required="" name="email">
                                 </div>
                             </div>
                             <button type="submit"
@@ -162,16 +163,15 @@
                     </div>
                     <!--  //contact form grid ends here -->
                 </div>
+                {% for review in movie.reviews_set.all %}
                 <div class="media py-5">
                     <img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image"
                          style="outline: none; cursor: inherit;">
                     <div class="media-body mt-4">
                         <h5 class="mt-0 editContent"
-                            style="outline: none; cursor: inherit;">Daniel Doe</h5>
+                            style="outline: none; cursor: inherit;">{{ review.name }}</h5>
                         <p class="mt-2 editContent" style="outline: none; cursor: inherit;">
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-                            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                            vulputate at, tempus viverra turpis.
+                            {{ review.text }}
                         </p>
                         <div class="media mt-5 editContent"
                              style="outline: none; cursor: inherit;">
@@ -192,6 +192,7 @@
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
         {% endblock movie %}
